--- a/ch3 - classifications.ipynb
+++ b/ch3 - classifications.ipynb
@@ -757,11 +757,24 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -7437.43392258, -28521.50892421, -11533.9209027 , ...,\n",
+       "       -11272.74403163, -20557.17140544, -38107.41501422])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## first use cross_val_predict\n",
     "\n",
-    "y_scores = cross_val_predict(sgd_clf, x_train, y_train_3, cv=3, method='decision_function')"
+    "y_scores = cross_val_predict(sgd_clf, x_train, y_train_3, cv=3, method='decision_function')\n",
+    "y_scores"
    ]
   },
   {
